--- a/examples/index.html
+++ b/examples/index.html
@@ -15,11 +15,11 @@
             padding: 16px;
         }
 
-        .hig1 rect{
+        .hig1 rect {
             fill: #03a9f4;
         }
 
-        .hig2 rect{
+        .hig2 rect {
             fill: #ff3366;
         }
     </style>
@@ -31,7 +31,7 @@
         <button onclick="addHighlight('hig1')">高亮1</button>
         <button onclick="addHighlight('hig2')">高亮2</button>
         <button onclick="mark.show()">show</button>
-        <button onclick="mark.hide()">hide</button>
+        <button onclick="mark.hide('highlight')">hide</button>
         <div id="content">
             <h1 style="padding-left: 24px;">将进酒·君不见</h1>
             <p><b>君不见，</b>黄河之水天上来，奔流到海不复回。</p>
@@ -67,7 +67,10 @@
         let mark = new Mark("content");
         console.log(mark);
         mark.on('selected', (data) => {
-            _rangeStr = data.rangeStr;
+            _rangeStr = data.markStr;
+        })
+        mark.on('render', () => {
+            console.log('render');
         })
         mark.render();
 
@@ -81,19 +84,22 @@
                     mark.remove(rangeStr, 'underline');
                 }
 
-            })
+            }, { name: "1" })
             window.getSelection().removeAllRanges();
         }
 
         function addHighlight(classNmae) {
             console.log("高亮");
-            mark.highlight(_rangeStr, classNmae, (e) => {
-                let rangeStr = e.target.getAttribute('data-id')
-                let r = confirm("是否删除高亮?")
-                if (r) {
-                    mark.remove(rangeStr, 'highlight');
+            mark.highlight(_rangeStr, classNmae,
+                (e,str) => {
+                    console.log(str);
+                    let rangeStr = e.target.getAttribute('data-id')
+                    let r = confirm("是否删除高亮?")
+                    if (r) {
+                        mark.remove(rangeStr, 'highlight');
+                    }
                 }
-            })
+            )
             window.getSelection().removeAllRanges();
         }
     </script>
